# shared_memory_ipc

./: CMakeLists.txt  Readme.md  _clang-format  run.sh
include/: config.h  message.h  shared_data_container.h
src/: main.cpp
tests/: shared_data_container_tests.cpp
